turtleart.square.Square.scala.error
Compilation error:
Square:1: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {avance(200);droite();avance(200);droite();avance(200);droite();avance(200);droite()} 
                                      ^Square:1: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {avance(200);droite();avance(200);droite();avance(200);droite();avance(200);droite()} 
                                                           ^Square:1: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {avance(200);droite();avance(200);droite();avance(200);droite();avance(200);droite()} 
                                                                                ^Square:1: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {avance(200);droite();avance(200);droite();avance(200);droite();avance(200);droite()} 
                                                                                                     ^